2008-02-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc-git.el (vc-git-after-dir-status, vc-git-dir-status): New funcs.

2008-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* image-mode.el (image-get-display-property): New fun.
	(image-forward-hscroll, image-next-line, image-eol, image-eob)
	(image-mode, image-minor-mode, image-toggle-display-text)
	(image-toggle-display): Use it.

2008-02-18  Jason Rumney  <jasonr@gnu.org>

	* international/mule.el (xml-find-file-coding-system): Don't warn
	about utf-16 with BOM.

	* nxml/nxml-mode.el (nxml-mode): Don't add a write-contents-hook.

	* international/mule.el (sgml-xml-auto-coding-function): Detect and
	warn if file encoding is not utf-8 and encoding not specified.
	(xml-find-file-coding-system): New function.
	* international/mule-conf.el (file-coding-system-alist): Use it.

2008-02-17  Glenn Morris  <rgm@gnu.org>

	* international/mule-cmds.el (set-locale-environment):
	Pass `frame' to getenv for LC_MESSAGES.

2008-02-17  Juri Linkov  <juri@jurta.org>

	* time.el (emacs-init-time): Use format instead of format-seconds.

2008-02-17  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-search-entry): Rename from
	bibtex-find-entry.  Add autoload cookie.
	(bibtex-find-entry): Alias for bibtex-search-entry.
	(bibtex-search-crossref): Rename from bibtex-find-crossref.
	(bibtex-find-crossref): Alias for bibtex-search-crossref.
	(bibtex-clean-entry): atomic-change-group removed.
	(bibtex-format-entry): Use atomic-change-group.  Use unwind-protect
	to locate buffer location where error occurred.
	Make error messages more specific.
	(bibtex-parse-keys): Only parse if buffer uses bibtex-mode.

2008-02-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/hideshow.el (hs-minor-mode-map): Move menu creation to
	top level.

	* simple.el (transient-mark-mode): Add an :init-value.

	* startup.el (command-line): Use custom-reevaluate-setting for
	transient-mark-mode.
