@@ -1,3 +1,7 @@
+2008-02-18  Bastien Guerry  <Bastien.Guerry@ens.fr>
+
+	* info.el (Info-read-node-name): Removed unused `default' arg.
+
 2008-02-18  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	* vc-git.el (vc-git-after-dir-status, vc-git-dir-status): New funcs.
